@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.78 (gritter) 1/25/06";
+	"@(#)/usr/ucb/otfdump.sl	5.79 (gritter) 1/26/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.78 (gritter) 1/25/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.78 (gritter) 1/25/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.79 (gritter) 1/26/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.79 (gritter) 1/26/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.78 (gritter) 1/25/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.79 (gritter) 1/26/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.78 (gritter) 1/25/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.79 (gritter) 1/26/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.78";
+const char revision[] = "5.79";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -41,7 +41,7 @@ nroff.d/n6.c: * Sccsid @(#)n6.c	1.27 (gritter) 12/23/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.28 (gritter) 12/20/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
 troff.d/afm.c: * Sccsid @(#)afm.c	1.43 (gritter) 1/25/06
-troff.d/afm.h: * Sccsid @(#)afm.h	1.22 (gritter) 1/24/06
+troff.d/afm.h: * Sccsid @(#)version.c	5.79 (gritter) 1/26/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
@@ -61,7 +61,7 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.131 (gritter) 1/24/06
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.132 (gritter) 1/26/06
 troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.6 (gritter) 10/1/05
 troff.d/dpost.d/dpost_afm.c: * Sccsid @(#)dpost_afm.c	1.2 (gritter) 9/29/05
 troff.d/dpost.d/dpost_draw.c: * Sccsid @(#)dpost_draw.c	1.5 (gritter) 11/28/05
